--- a/Vista/Style.css
+++ b/Vista/Style.css
@@ -1,335 +1,506 @@
-/* Main CSS Here */
- 
-@import url(
-"https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
- 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+    box-sizing: border-box;
 }
-:root {
-  --background-color1: #fafaff;
-  --background-color2: #ffffff;
-  --background-color3: #ededed;
-  --background-color4: #cad7fda4;
-  --primary-color: #49ac49;
-  --secondary-color: #007a00;
-  --Border-color: #008f18;
-  --one-use-color: #006912;
-  --two-use-color: #00460c;
-}
+
 body {
-  background-color: var(--background-color4);
-  max-width: 100%;
-  overflow-x: hidden;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
- 
-header {
-  height: 70px;
-  width: 100vw;
-  padding: 0 30px;
-  background-color: var(--background-color1);
-  position: fixed;
-  z-index: 100;
-  box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+.submenu {
+    display: none;
+    position: absolute;
+    background-color: #ADD8E6; /* Changed background color */
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
 }
- 
+.navigation a:hover + .submenu {
+    display: block;
+    background-color: #F08080; /* Changed background color on hover */
+}
+
+/* Logo */
 .logo {
-  font-size: 27px;
-  font-weight: 600;
-  color: rgb(47, 141, 70);
+
+
+    margin-left: -750%;
+
+
 }
- 
-.icn {
-  height: 30px;
+
+/* Navigation */
+.navigation {
+    position: absolute;
+    width: 100%;
+    height: 12%;
+    padding: 0 12%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 1;
 }
-.menuicn {
-  cursor: pointer;
+
+.navigation-left {
+    margin-left: -33px;
 }
- 
-.searchbar,
-.message,
-.logosec {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.navigation-left a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #333745;
+    font-size: 12px;
+    font-weight: bold;
+    width: 110px;
+    height: 39px;
+    border: 2px solid rgb(0 123 255);
+    border-radius: 15px;
+    display: inline-block;
+    text-align: center;
+    line-height: 21px;
+    transition: all .2s;
 }
- 
-.searchbar2 {
-  display: none;
+
+      .dropdown-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    float: left;
+    min-width: 12rem;
+    padding: 0.5rem 0;
+    margin: 0.125rem 0 0;
+    font-size: 1rem;
+    color: #919191;
+    text-align: left;
+    list-style: none;
+    background-color: transparent;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,.15);
+    border-radius: 0.25rem;
 }
- 
-.logosec {
-  gap: 60px;
+.btn.focus, .btn:focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.0rem rgba(0,123,255,.25);
 }
- 
-.searchbar input {
-  width: 250px;
-  height: 42px;
-  border-radius: 50px 0 0 50px;
-  background-color: var(--background-color3);
-  padding: 0 20px;
-  font-size: 15px;
-  outline: none;
-  border: none;
+
+.navigation-left a:hover, .navigation-left a:focus {
+    border-color: transparent;
+    background-color: rgba(44, 45, 47, 0);
 }
-.searchbtn {
-  width: 50px;
-  height: 42px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0px 50px 50px 0px;
-  background-color: var(--secondary-color);
-  cursor: pointer;
+
+.navigation-center {
+    margin-right: 85px;
 }
- 
-.message {
-  gap: 40px;
-  position: relative;
-  cursor: pointer;
+
+.navigation-right {
+    display: flex;
+    align-items: center;
 }
-.circle {
-  height: 7px;
-  width: 7px;
-  position: absolute;
-  background-color: #7bfa96;
-  border-radius: 50%;
-  left: 19px;
-  top: 8px;
+
+.login-btn {
+    background-color: #10e831ad;
+    width: 97px;
+    height: 30px;
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 15px;
+    border: none;
+    color: #333745;
+    text-transform: uppercase;
+    margin-left: 20px;
+    transition: all .2s;
+    cursor: pointer;
 }
-.dp {
-  height: 40px;
-  width: 40px;
-  background-color: #626262;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+.login-btn:hover {
+    transform: scale(1.06);
 }
-.main-container {
-  display: flex;
-  width: 100vw;
-  position: relative;
-  top: 70px;
-  z-index: 1;
+
+/* Slider wrapper*/
+.css-slider-wrapper {
+    display: block;
+    background: #FFF;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
-.dpicn {
-  height: 42px;
+
+/* Slider */
+.slider {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 1;
+    z-index: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    -webkit-transition: -webkit-transform 1600ms;
+    transition: -webkit-transform 1600ms, transform 1600ms;
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
- 
-.main {
-  height: calc(100vh - 70px);
-  width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  padding: 40px 30px 30px 30px;
+
+/* Slides Background Color */
+.slide-1 {
+    background: #11ad3b;
+    left: 0;
 }
- 
-.main::-webkit-scrollbar-thumb {
-  background-image:
-        linear-gradient(to bottom, rgb(1, 151, 39), rgb(0, 50, 7));
+.slide-2 {
+    background: #1b70c0;
+    left: 100%
 }
-.main::-webkit-scrollbar {
-  width: 5px;
+.slide-3 {
+    background: #9ea6b3;
+    left: 200%
 }
-.main::-webkit-scrollbar-track {
-  background-color: #9e9e9eb2;
+.slide-4 {
+    background: #b1a494;
+    left: 300%;
 }
- 
-.box-container {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-  gap: 50px;
+.slider {
+    display: flex;
+    justify-content: flex-start;
 }
-.nav {
-  min-height: 91vh;
-  width: 250px;
-  background-color: var(--background-color2);
-  position: absolute;
-  top: 0px;
-  left: 00;
-  box-shadow: 1px 1px 10px rgba(198, 189, 248, 0.825);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  overflow: hidden;
-  padding: 30px 0 20px 10px;
+.slider-content {
+    width: 635px;
+    padding-left: 100px;
 }
-.navcontainer {
-  height: calc(100vh - 70px);
-  width: 250px;
-  position: relative;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  transition: all 0.5s ease-in-out;
+
+
+/* Slider Inner Slide Effect */
+.slider h2 {
+    color: #333333;
+    font-weight: 900;
+    text-transform: capitalize;
+    font-size: 60px;
+    font-weight: 300;
+    line-height: 1.2;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
+    margin-top: 0;
+    letter-spacing: 2px;
 }
-.navcontainer::-webkit-scrollbar {
-  display: none;
+
+.slider h4 {
+    font-size: 22px;
+    font-family: "Oswald";
+    color: rgba(51, 51, 51, 0.349);
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
 }
-.navclose {
-  width: 80px;
+
+.slide-1 > img {
+    position: absolute;
+    right: 10%;
+    bottom: 0;
+    height: 90%;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
+    margin-right: 20%;
 }
-.nav-option {
-  width: 250px;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  padding: 0 30px 0 20px;
-  gap: 20px;
-  transition: all 0.1s ease-in-out;
+
+.slide-1 > img {
+    right: 0;
 }
-.nav-option:hover {
-  border-left: 5px solid #a2a2a2;
-  background-color: #dadada;
-  cursor: pointer;
+.slide-2 > img {
+    position: absolute;
+    right: 10%;
+    bottom: 0;
+    height: 90%;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
+    margin-right: 10%;
+    margin-bottom: -1%;
 }
-.nav-img {
-  height: 30px;
+
+.slide-2 > img {
+    right: 0;
 }
- 
-.nav-upper-options {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 30px;
+
+.slide-3 > img {
+    position: absolute;
+    right: 10%;
+    bottom: 0;
+    height: 75%;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
+    margin-right: 15%;
+    margin-bottom: 5%;
 }
- 
-.option1 {
-  border-left: 5px solid #00581aaf;
-  background-color: var(--Border-color);
-  color: white;
-  cursor: pointer;
+
+.slide-3 > img {
+    right: 0;
 }
-.option1:hover {
-  border-left: 5px solid #00581aaf;
-  background-color: var(--Border-color);
+
+.slide-4 > img {
+    position: absolute;
+    right: 8%;
+    bottom: 0;
+    height: 70%;
+    opacity: 0;
+    -webkit-transform: translateX(500px);
+    transform: translateX(500px);
+    margin-right: 15%;
+    margin-bottom: 170px;
 }
-.box {
-  height: 130px;
-  width: 230px;
-  border-radius: 20px;
-  box-shadow: 3px 3px 10px rgba(0, 87, 39, 0.751);
-  padding: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  cursor: pointer;
-  transition: transform 0.3s ease-in-out;
+
+.slide-4 > img {
+    right: 0;
 }
-.box:hover {
-  transform: scale(1.08);
+
+.buy-now-btn {
+    background-color: #0a6121;
+    width: 220px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 100;
+    color: #fff;
+    text-align: center;
+    position: center;
+    cursor: pointer;
+    transition: all .2s;
 }
- 
-.box:nth-child(1) {
-  background-color: var(--one-use-color);
+
+
+
+.buy-now-btn1 {
+    background-color: #2e9fea;
+    width: 220px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 100;
+    color: #fff;
+    text-align: center;
+    position: center;
+    cursor: pointer;
+    transition: all .2s;
 }
-.box:nth-child(2) {
-  background-color: var(--two-use-color);
+
+.buy-now-btn2 {
+    background-color: #545f66;
+    width: 220px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 100;
+    color: #fff;
+    text-align: center;
+    position: center;
+    cursor: pointer;
+    transition: all .2s;
 }
-.box:nth-child(3) {
-  background-color: var(--one-use-color);
+.buy-now-btn3 {
+    background-color: #a87840;
+    width: 220px;
+    height: 50px;
+    border-radius: 30px;
+    border: none;
+    font-family: Montserrat;
+    font-size: 20px;
+    font-weight: 100;
+    color: #fff;
+    text-align: center;
+    position: center;
+    cursor: pointer;
+    transition: all .2s;
 }
-.box:nth-child(4) {
-  background-color: var(--two-use-color);
+
+.buy-now-btn:hover {
+    box-shadow: 0px 0px 60px -17px rgba(51,51,51,1);
 }
- 
-.box img {
-  height: 50px;
+
+.slider .buy-now-btn:focus,
+.navigation .login-btn:focus {
+    outline: none;
 }
-.box .text {
-  color: white;
+
+/* Animations */
+.slider h2 {
+    -webkit-transition: opacity 800ms, -webkit-transform 800ms;
+    transition: transform 800ms, opacity 800ms;
+    -webkit-transition-delay: 1s; /* Safari */
+    transition-delay: 1s;
 }
-.topic {
-  font-size: 13px;
-  font-weight: 400;
-  letter-spacing: 1px;
+.slider h4 {
+    -webkit-transition: opacity 800ms, -webkit-transform 800ms;
+    transition: transform 800ms, opacity 800ms;
+    -webkit-transition-delay: 1.4s; /* Safari */
+    transition-delay: 1.4s;
 }
- 
-.topic-heading {
-  font-size: 30px;
-  letter-spacing: 3px;
+.slider > img {
+    -webkit-transition: opacity 800ms, -webkit-transform 800ms;
+    transition: transform 800ms, opacity 800ms;
+    -webkit-transition-delay: 1.2s; /* Safari */
+    transition-delay: 1.2s;
 }
- 
-.report-container {
-  min-height: 300px;
-  max-width: 1200px;
-  margin: 70px auto 0px auto;
-  background-color: #ffffff;
-  border-radius: 30px;
-  box-shadow: 3px 3px 10px rgb(188, 188, 188);
-  padding: 0px 20px 20px 20px;
+
+/* Number Pagination */
+.number-pagination {
+    position: absolute;
+    bottom: 30px;
+    right: 100px;
+    font-family: "Oswald";
+    font-weight: bold;
 }
-.report-header {
-  height: 80px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 20px 20px 10px 20px;
-  border-bottom: 2px solid rgba(0, 168, 28, 0.59);
+
+.number-pagination span {
+    font-size: 30px;
+    color: #16e04ca0;
+    letter-spacing: 4px;
 }
- 
-.recent-Articles {
-  font-size: 30px;
-  font-weight: 600;
-  color: #00b318;
+
+
+.number-pagination span:after {
+    content: "/4";
+    font-size: 16px;
+    color: #fff;
 }
- 
-.view {
-  height: 35px;
-  width: 90px;
-  border-radius: 8px;
-  background-color: #008a07;
-  color: white;
-  font-size: 15px;
-  border: none;
-  cursor: pointer;
+
+/* Slider Pagger */
+.slider-pagination {
+    position: absolute;
+    bottom: 30px;
+    width: 575px;
+    left: 100px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
 }
- 
-.report-body {
-  max-width: 1160px;
-  overflow-x: auto;
-  padding: 20px;
+.slider-pagination label {
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    display: inline-block;
+    background: #fff;
+    margin: 0 10px;
+    cursor: pointer;
 }
-.report-topic-heading,
-.item1 {
-  width: 1120px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+/* Slider Pagger Event */
+.slide-radio1:checked ~ .slider-pagination .page1,
+.slide-radio2:checked ~ .slider-pagination .page2,
+.slide-radio3:checked ~ .slider-pagination .page3,
+.slide-radio4:checked ~ .slider-pagination .page4 {
+    width: 14px;
+    height: 14px;
+    border: 2px solid #16e04c96;
+    background: transparent;
 }
-.t-op {
-  font-size: 18px;
-  letter-spacing: 0px;
+
+/* Slider Slide Effect */
+.slide-radio1:checked ~ .slider {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
 }
- 
-.items {
-  width: 1120px;
-  margin-top: 15px;
+.slide-radio2:checked ~ .slider {
+    -webkit-transform: translateX(-100%);
+    transform: translateX(-100%);
 }
- 
-.item1 {
-  margin-top: 20px;
+.slide-radio3:checked ~ .slider {
+    -webkit-transform: translateX(-200%);
+    transform: translateX(-200%);
 }
-.t-op-nextlvl {
-  font-size: 14px;
-  letter-spacing: 0px;
-  font-weight: 600;
+.slide-radio4:checked ~ .slider {
+    -webkit-transform: translateX(-300%);
+    transform: translateX(-300%);
 }
- 
-.label-tag {
-  width: 100px;
-  text-align: center;
-  background-color: rgb(0, 177, 0);
-  color: white;
-  border-radius: 4px;
+
+.slide-radio1:checked ~ .slide-1 h2,
+.slide-radio2:checked ~ .slide-2 h2,
+.slide-radio3:checked ~ .slide-3 h2,
+.slide-radio4:checked ~ .slide-4 h2,
+.slide-radio1:checked ~ .slide-1 h4,
+.slide-radio2:checked ~ .slide-2 h4,
+.slide-radio3:checked ~ .slide-3 h4,
+.slide-radio4:checked ~ .slide-4 h4,
+.slide-radio1:checked ~ .slide-1 > img,
+.slide-radio2:checked ~ .slide-2 > img,
+.slide-radio3:checked ~ .slide-3 > img,
+.slide-radio4:checked ~ .slide-4 > img {
+    -webkit-transform: translateX(0);
+    transform: translateX(0);
+    opacity: 1
+}
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+    .slider h2 {
+        font-size: 20px;
+    }
+    .slider h4 {
+        font-size: 16px;
+    }
+
+    .slider-content {
+        padding: 0 2%
+    }
+
+    .navigation {
+        padding: 0 2%;
+    }
+
+    .navigation-left {
+        display: none;
+    }
+
+    .number-pagination {
+        right: 2%;
+    }
+    .slider-pagination {
+        left: 2%;
+    }
+
+    .slider .buy-now-btn {
+        padding: 0 15px;
+        width: 175px;
+        height: 42px;
+    }
+
+    .slider .buy-now-btn:after {
+        top: 15px;
+    }
+
+    .slider > img {
+        right: 2%;
+    }
+
+    .slide-1 > img {
+        right: -110px;
+    }
+
+
+
 }
